# Volatility-Arbitrage-Backtesting-Platform

./: README.md  api.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_backtest.py
.next/: trace
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
frontend/components/: dashboard.tsx
frontend/components/ui/: badge.tsx  progress.tsx  slider.tsx  tabs.tsx
output/: equity_curve.csv  performance_metrics.csv  research_dataset.csv  trade_summary.csv  trades.csv
output_test/: equity_curve.csv  performance_metrics.csv  research_dataset.csv  trade_summary.csv  trades.csv
src/quant_trade/: __init__.py  backtest.py  black_scholes.py  config.py  data.py  metrics.py  signals.py  visualization.py
tests/: test_black_scholes.py
