[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradezapp-quant-project"
version = "0.1.0"
description = "Volatility arbitrage backtesting engine for options strategies"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Manoj J" }]
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "matplotlib>=3.8.0",
  "yfinance>=0.2.40",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
